<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@drawable/matrix_s1"
        android:contentDescription="@string/image_background"
        android:foregroundGravity="fill"
        android:scaleType="centerCrop"
        app:layout_constrainedWidth="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#000000"
            android:contentDescription="@string/button_1"
            android:scaleType="fitCenter"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            app:srcCompat="@drawable/shperedarkred_s"
            android:clickable="true"
            android:onClick="onClick"/>

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#000000"
            android:contentDescription="@string/button_2"
            android:scaleType="fitCenter"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            app:srcCompat="@drawable/spiked_s2"
            android:clickable="true"
            android:onClick="onClick"/>

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#000000"
            android:contentDescription="@string/button_3"
            android:scaleType="fitCenter"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            app:srcCompat="@drawable/green_s2"
            android:clickable="true"
            android:onClick="onClick"/>

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#000000"
            android:contentDescription="@string/button_4"
            android:scaleType="fitCenter"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            app:srcCompat="@drawable/sphereyellow_s2"
            android:clickable="true"
            android:onClick="onClick"/>

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#000000"
            android:contentDescription="@string/button_quit"
            android:scaleType="fitCenter"
            android:scaleX="0.95"
            android:scaleY="0.95"
            app:layout_column="4"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"
            app:srcCompat="@drawable/powerbtn_s"
            android:clickable="true"
            android:onClick="onClick"/>
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/text_h"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="#000000"
        android:text="@string/text_header"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

</androidx.constraintlayout.widget.ConstraintLayout>